Teach ModulePrefixContext which module owns the file
Three things follow from a context that knows the current module, and all
three are needed before a generator can resolve qualifiers against it:

A type of the file's own module resolves to the empty prefix and registers
nothing. It needs no import, and claiming a prefix on its behalf would
push a genuinely external module named in the same operation onto an alias
it did not need.

A sibling module of the same package is registered under a blank
organization, which is how its import has to be written.

pendingImportStatements() emits what is still missing, in registration
order, each already carrying its `as` clause. Unlike importSignatureFor it
applies no ambiguity check: it is for a caller that rewrites references by
authored qualifier, and so can always follow an alias through.

requalifyAuthored gains a second spelling per entry. The map key is only a
proposed join between text and module -- TypeTransformer can key a
member's imports by the type name, and a union arm inherits earlier arms'
entries through the shared MemberBuilder -- so the module's own natural
prefix is offered alongside it, guarded against being contested. Without
that, an aliased module whose entry was keyed by type name emits `as time2`
while the text still says `time:Utc`.

pendingImports() now preserves the LinkedHashMap order it was built to
keep; Map.copyOf was discarding it under its only consumer.

A null ModuleInfo classifies everything as external, so every existing
caller is unaffected.